--- a/ss3_angular_overview/angular-calculator-app/src/app/calculator/calculator.component.html
+++ b/ss3_angular_overview/angular-calculator-app/src/app/calculator/calculator.component.html
@@ -1,34 +1,34 @@
 <h2>Calculator</h2>
 <div>
-  <table id="table">
+  <table>
     <tr>
       <td colspan="5"><input id="result" type="text"></td>
     </tr>
     <tr>
-      <td><input type="button" name="bttn" value="7" (click)='so("7")')></td>
-      <td><input type="button" name="bttn" value="8" (click)='so("8")'></td>
-      <td><input type="button" name="bttn" value="9" (click)='so("9")'></td>
-      <td><input type="button" name="bttn" value="/" (click)='so("/")'></td>
-      <td><input type="button" name="bttn" value="AC" onclick="xoa()"></td>
+      <td><input type="button" value="7" (click)='so("7")')></td>
+      <td><input type="button" value="8" (click)='so("8")'></td>
+      <td><input type="button" value="9" (click)='so("9")'></td>
+      <td><input type="button" value="/" (click)='so("/")'></td>
+      <td><input type="button" value="AC" ></td>
     </tr>
     <tr>
-      <td><input type="button" name="bttn" value="4" (click)='so("4")'></td>
-      <td><input type="button" name="bttn" value="5" (click)='so("5")'></td>
-      <td><input type="button" name="bttn" value="6" (click)='so("6")'></td>
-      <td><input type="button" name="bttn" value="*" (click)= 'so("*")'></td>
-      <td><input type="button" name="bttn" value="C" onclick="xoahet()"></td>
+      <td><input type="button" value="4" (click)='so("4")'></td>
+      <td><input type="button" value="5" (click)='so("5")'></td>
+      <td><input type="button" value="6" (click)='so("6")'></td>
+      <td><input type="button" value="*" (click)='so("*")'></td>
+      <td><input type="button" value="C" ></td>
     </tr>
     <tr>
       <td><input type="button" name="bttn" value="1" (click)='so("1")'></td>
       <td><input type="button" name="bttn" value="2" (click)='so("2")'></td>
       <td><input type="button" name="bttn" value="3" (click)='so("3")'></td>
       <td><input type="button" name="bttn" value="+" (click)='so("+")'></td>
-      <td><input type="button" name="bttn" value="=" (click)="bang()")></td>
+      <td><input type="button" name="bttn" value="=" (click)='bang()')></td>
     </tr>
     <tr>
-      <td><input type="button" name="bttn" value="0" (click)="so(this.value)"></td>
-      <td><input type="button" name="bttn" value="." (click)="so(this.value)"></td>
-      <td><input type="button" name="bttn" value="-" (click)="so(this.value)"></td>
+      <td><input type="button" name="bttn" value="0" (click)='so("0")'></td>
+      <td><input type="button" name="bttn" value="." (click)='so(".")'></td>
+      <td><input type="button" name="bttn" value="-" (click)='so("-")'></td>
     </tr>
   </table>
 </div>
