--- a/ss3_angular_overview/angular-calculator-app/src/app/calculator/calculator.component.html
+++ b/ss3_angular_overview/angular-calculator-app/src/app/calculator/calculator.component.html
@@ -5,25 +5,25 @@
       <td colspan="5"><input id="result" type="text"></td>
     </tr>
     <tr>
-      <td><input type="button" value="7" (click)='so("7")')></td>
-      <td><input type="button" value="8" (click)='so("8")'></td>
-      <td><input type="button" value="9" (click)='so("9")'></td>
-      <td><input type="button" value="/" (click)='so("/")'></td>
-      <td><input type="button" value="AC" ></td>
+      <td><button (click)='so("7")'>7</button></td>
+      <td><button (click)='so("8")'>8</button></td>
+      <td><button (click)='so("9")'>9</button></td>
+      <td><button (click)='so("/")'>/</button></td>
+      <td><button (click)='so("AC")'>AC</button></td>
     </tr>
     <tr>
       <td><input type="button" value="4" (click)='so("4")'></td>
       <td><input type="button" value="5" (click)='so("5")'></td>
       <td><input type="button" value="6" (click)='so("6")'></td>
       <td><input type="button" value="*" (click)='so("*")'></td>
-      <td><input type="button" value="C" ></td>
+<!--      <td><input type="button" value="C" ></td>-->
     </tr>
     <tr>
       <td><input type="button" name="bttn" value="1" (click)='so("1")'></td>
       <td><input type="button" name="bttn" value="2" (click)='so("2")'></td>
       <td><input type="button" name="bttn" value="3" (click)='so("3")'></td>
       <td><input type="button" name="bttn" value="+" (click)='so("+")'></td>
-      <td><input type="button" name="bttn" value="=" (click)='bang()')></td>
+      <td><button (click)="bang()">=</button></td>
     </tr>
     <tr>
       <td><input type="button" name="bttn" value="0" (click)='so("0")'></td>
