--- a/case-study/src/app/app.component.html
+++ b/case-study/src/app/app.component.html
@@ -1,3 +1,3 @@
 <app-header></app-header>
-<app-facility-edit></app-facility-edit>
+<app-customer-list></app-customer-list>
 <app-footer></app-footer>
