--- a/case-study/src/app/header/header.component.html
+++ b/case-study/src/app/header/header.component.html
@@ -12,19 +12,38 @@
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse offset" id="navbarSupportedContent">
         <ul class="nav navbar-nav menu_nav ml-auto">
-          <li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="about.html">About us</a></li>
-          <li class="nav-item"><a class="nav-link" href="accomodation.html">Accomodation</a></li>
-          <li class="nav-item"><a class="nav-link" href="gallery.html">Gallery</a></li>
+          <li class="nav-item active"><a class="nav-link" href="/">Home</a></li>
           <li class="nav-item submenu dropdown">
-            <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Blog</a>
+            <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Customer</a>
             <ul class="dropdown-menu">
-              <li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
-              <li class="nav-item"><a class="nav-link" href="blog-single.html">Blog Details</a></li>
+              <li class="nav-item"><a class="nav-link" [routerLink]="['/customer-list']">List</a></li>
+              <li class="nav-item"><a class="nav-link" [routerLink]="['/customer-create']" >Create</a></li>
             </ul>
           </li>
-          <li class="nav-item"><a class="nav-link" href="elements.html">Elemests</a></li>
-          <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+
+          <li class="nav-item submenu dropdown">
+            <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Employee</a>
+            <ul class="dropdown-menu">
+              <li class="nav-item"><a class="nav-link" [routerLink]="['#']" >List</a></li>
+              <li class="nav-item"><a class="nav-link" [routerLink]="['#']" >Create</a></li>
+            </ul>
+          </li>
+
+          <li class="nav-item submenu dropdown">
+            <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Facility</a>
+            <ul class="dropdown-menu">
+              <li class="nav-item"><a class="nav-link" [routerLink]="['/facility-list']">List</a></li>
+              <li class="nav-item"><a class="nav-link" [routerLink]="['/facility-create']">Create</a></li>
+            </ul>
+          </li>
+
+          <li class="nav-item submenu dropdown">
+            <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Contract</a>
+            <ul class="dropdown-menu">
+              <li class="nav-item"><a class="nav-link" [routerLink]="['#']">List</a></li>
+              <li class="nav-item"><a class="nav-link" [routerLink]="['/#']">Create</a></li>
+            </ul>
+          </li>
         </ul>
       </div>
     </nav>
