--- a/case-study/src/app/customer/customer-create/customer-create.component.html
+++ b/case-study/src/app/customer/customer-create/customer-create.component.html
@@ -1,1 +1,110 @@
-<p>customer-create works!</p>
+<!--================Banner Area =================-->
+<section class="banner_area">
+  <div class="booking_table d_flex align-items-center">
+    <div class="overlay bg-parallax" data-stellar-ratio="0.9" data-stellar-vertical-offset="0" data-background=""></div>
+    <div class="container">
+      <div class="banner_content text-center">
+        <h6>Away from furama life</h6>
+        <h2>CUSTOMER</h2>
+      </div>
+    </div>
+  </div>
+
+</section>
+<!--================Banner Area =================-->
+<!-- ================ Explore section start ================= -->
+<section class="section-margin section-margin--small">
+  <div class="container">
+    <div class="section-intro text-center pb-80px">
+      <div class="section-intro__style">
+        <img alt="" src="img/home/user.png">
+      </div>
+      <h2>Create New Customer</h2>
+    </div>
+    <div class="col-8 mx-auto">
+      <div class="mx-auto shadow-lg p-3 mb-5 bg-white rounded-lg">
+        <div class="form-group row">
+          <label for="name" class="col-sm-3 col-form-label">Name</label>
+          <div class="col-sm-9">
+            <input type="text" class="form-control" id="name">
+          </div>
+        </div>
+        <div class="form-group row">
+          <label for="code" class="col-sm-3 col-form-label">Code</label>
+          <div class="col-sm-9">
+            <input type="text" class="form-control" id="code">
+          </div>
+        </div>
+        <div class="form-group row">
+          <label for="birthday" class="col-sm-3 col-form-label">Birthday</label>
+          <div class="col-sm-9">
+            <input type="date" class="form-control" id="birthday">
+          </div>
+        </div>
+        <div class="form-group row">
+          <label for="idCard" class="col-sm-3 col-form-label">Id card</label>
+          <div class="col-sm-9">
+            <input type="number" class="form-control" id="idCard">
+          </div>
+        </div>
+        <div class="form-group row">
+          <label for="phone" class="col-sm-3 col-form-label">Phone</label>
+          <div class="col-sm-9">
+            <input type="number" class="form-control" id="phone">
+          </div>
+        </div>
+        <div class="form-group row">
+          <label for="email" class="col-sm-3 col-form-label">Email</label>
+          <div class="col-sm-9">
+            <input type="email" class="form-control" id="email">
+          </div>
+        </div>
+        <div class="form-group row">
+          <label for="address" class="col-sm-3 col-form-label">Address</label>
+          <div class="col-sm-9">
+            <input type="text" class="form-control" id="address">
+          </div>
+        </div>
+        <div class="form-group row">
+          <label for="gender" class="col-sm-3 col-form-label">Gender</label>
+          <div class="col-sm-9">
+            <select class="form-control"
+                    id="gender"
+                    name="gender">
+              <option value="-1">Other</option>
+              <option value="0">Female</option>
+              <option value="1">Male</option>
+            </select>
+          </div>
+        </div>
+        <div class="form-group row">
+          <label for="customerType" class="col-sm-3 col-form-label">Customer type</label>
+          <div class="col-sm-9">
+            <select id="customerType"
+                    class="form-control">
+              <option value="null">Select Customer type</option>
+              <option value="1">Diamond</option>
+              <option value="2">Platinum</option>
+              <option value="3">Gold</option>
+              <option value="4">Silver</option>
+              <option value="5">Member</option>
+            </select>
+          </div>
+        </div>
+        <div class="d-flex justify-content-center">
+          <div class="mx-2">
+            <a href="#" class="button button--cancel cancel-banner-btn">Cancel</a>
+          </div>
+          <div class="mx-2">
+            <a href="#" class="button button--active home-banner-btn">Create</a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </div>
+  <div>
+    <h4>Copyright: Phạm Việt Khoa-C1221G1</h4>
+  </div>
+</section>
+<!-- ================ Explore section end ================= -->
