--- a/case-study/src/app/header/header.component.html
+++ b/case-study/src/app/header/header.component.html
@@ -12,7 +12,7 @@
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse offset" id="navbarSupportedContent">
         <ul class="nav navbar-nav menu_nav ml-auto">
-          <li class="nav-item active"><a class="nav-link" href="'/'">Home</a></li>
+          <li class="nav-item active"><a class="nav-link" [routerLink]="['/home']">Home</a></li>
           <li class="nav-item submenu dropdown">
             <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Customer</a>
             <ul class="dropdown-menu">
