--- a/case-study/src/app/customer/customer-create/customer-create.component.html
+++ b/case-study/src/app/customer/customer-create/customer-create.component.html
@@ -14,6 +14,7 @@
 <!--================Banner Area =================-->
 <!-- ================ Explore section start ================= -->
 <section class="section-margin section-margin--small">
+  <form [formGroup]="createCus" (ngSubmit)="onSubmit()">
   <div class="container">
     <div class="section-intro text-center pb-80px">
       <div class="section-intro__style">
@@ -26,43 +27,43 @@
         <div class="form-group row">
           <label for="name" class="col-sm-3 col-form-label">Name</label>
           <div class="col-sm-9">
-            <input type="text" class="form-control" id="name">
+            <input type="text" class="form-control" id="name" name="name" formControlName="name">
           </div>
         </div>
         <div class="form-group row">
           <label for="code" class="col-sm-3 col-form-label">Code</label>
           <div class="col-sm-9">
-            <input type="text" class="form-control" id="code">
+            <input type="text" class="form-control" id="code" name="code" formControlName="code">
           </div>
         </div>
         <div class="form-group row">
           <label for="birthday" class="col-sm-3 col-form-label">Birthday</label>
           <div class="col-sm-9">
-            <input type="date" class="form-control" id="birthday">
+            <input type="date" class="form-control" id="birthday" name="birthday" formControlName="birthday">
           </div>
         </div>
         <div class="form-group row">
           <label for="idCard" class="col-sm-3 col-form-label">Id card</label>
           <div class="col-sm-9">
-            <input type="number" class="form-control" id="idCard">
+            <input type="number" class="form-control" id="idCard" name="idCard" formControlName="idCard">
           </div>
         </div>
         <div class="form-group row">
           <label for="phone" class="col-sm-3 col-form-label">Phone</label>
           <div class="col-sm-9">
-            <input type="number" class="form-control" id="phone">
+            <input type="number" class="form-control" id="phone" name="phone" formControlName="phone">
           </div>
         </div>
         <div class="form-group row">
           <label for="email" class="col-sm-3 col-form-label">Email</label>
           <div class="col-sm-9">
-            <input type="email" class="form-control" id="email">
+            <input type="email" class="form-control" id="email" name="email" formControlName="email">
           </div>
         </div>
         <div class="form-group row">
           <label for="address" class="col-sm-3 col-form-label">Address</label>
           <div class="col-sm-9">
-            <input type="text" class="form-control" id="address">
+            <input type="text" class="form-control" id="address" name="address" formControlName="address">
           </div>
         </div>
         <div class="form-group row">
@@ -70,7 +71,7 @@
           <div class="col-sm-9">
             <select class="form-control"
                     id="gender"
-                    name="gender">
+                    name="gender" formControlName="gender">
               <option value="-1">Other</option>
               <option value="0">Female</option>
               <option value="1">Male</option>
@@ -81,13 +82,8 @@
           <label for="customerType" class="col-sm-3 col-form-label">Customer type</label>
           <div class="col-sm-9">
             <select id="customerType"
-                    class="form-control">
-              <option value="null">Select Customer type</option>
-              <option value="1">Diamond</option>
-              <option value="2">Platinum</option>
-              <option value="3">Gold</option>
-              <option value="4">Silver</option>
-              <option value="5">Member</option>
+                    class="form-control" name="type" formControlName="customerType">
+              <option *ngFor="let item of customerType" [ngValue]="item.id">{{item.type}}</option>
             </select>
           </div>
         </div>
@@ -96,15 +92,16 @@
             <a href="#" class="button button--cancel cancel-banner-btn">Cancel</a>
           </div>
           <div class="mx-2">
-            <a href="#" class="button button--active home-banner-btn">Create</a>
+<!--            <a href="#" class="button button&#45;&#45;active home-banner-btn" (click)="createCustomer()">Create</a>-->
+            <button type="submit">Create</button>
           </div>
         </div>
       </div>
     </div>
-
   </div>
   <div>
     <h4>Copyright: Phạm Việt Khoa-C1221G1</h4>
   </div>
+  </form>
 </section>
 <!-- ================ Explore section end ================= -->
