--- a/case-study/src/app/facility/facility-create/facility-create.component.html
+++ b/case-study/src/app/facility/facility-create/facility-create.component.html
@@ -67,7 +67,7 @@
           </div>
         </div>
         <div class="form-group row">
-          <label for="rentType" class="col-sm-3 col-form-label">Service type</label>
+          <label for="rentType" class="col-sm-3 col-form-label">Rent type</label>
           <div class="col-sm-9">
             <select class="form-control"
                     id="rentType"
