--- a/case-study/src/app/facility/facility-list/facility.component.html
+++ b/case-study/src/app/facility/facility-list/facility.component.html
@@ -17,25 +17,25 @@
 <!-- card 1-->
 <section class="container">
   <div class="row active-with-click">
-    <div class="col-md-4 col-sm-6 col-xs-12">
+    <div class="col-md-4 col-sm-6 col-xs-12" *ngFor="let item of facilitys">
       <article class="material-card Red">
         <h2>
-          <span>Shahnur Alam</span>
+          <span name="name">{{item.name}}</span>
           <strong>
             <i class="fa fa-fw fa-magic"></i>
-            Qui Maleficus
+            Giảng
           </strong>
         </h2>
         <div class="mc-content">
           <div class="img-container">
             <img
               class="img-responsive"
-              src="https://media-cdn.tripadvisor.com/media/photo-s/12/4e/e9/13/vip-room-2.jpg"
+              [src]="item.image"
             />
           </div>
           <div class="mc-description">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. ...
+            {{item.description}} <br>
+            <mark style="background: #ecec0b"><span style="font-size: x-large">Price: {{item.rentalFree}}</span></mark>
           </div>
         </div>
         <a class="mc-btn-action">
@@ -44,7 +44,7 @@
         <div class="mc-footer">
           <h4>Social</h4>
           <a target="_parent" href="#" style="padding:0px ; background-color: red;" class="fa fa-fw btn btn-danger"
-             data-toggle="modal" data-target="#exampleModal">
+             data-toggle="modal" data-target="#exampleModal" (click)="delete(item.name)">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash-fill"
                  viewBox="0 0 16 16">
               <path
@@ -64,218 +64,6 @@
       </article>
     </div>
 
-    <!-- card 2-->
-    <div class="col-md-4 col-sm-6 col-xs-12">
-      <article class="material-card Red">
-        <h2>
-          <span>Shahnur Alam</span>
-          <strong>
-            <i class="fa fa-fw fa-magic"></i>
-            Qui Maleficus
-          </strong>
-        </h2>
-        <div class="mc-content">
-          <div class="img-container">
-            <img
-              class="img-responsive"
-              src="https://media-cdn.tripadvisor.com/media/photo-s/12/4e/e9/13/vip-room-2.jpg"
-            />
-          </div>
-          <div class="mc-description">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. ...
-          </div>
-        </div>
-        <a class="mc-btn-action">
-          <i class="fa fa-bars"></i>
-        </a>
-        <div class="mc-footer">
-          <h4>Social</h4>
-          <a target="_parent" href="#" style="padding:0px ; background-color: red;" class="fa fa-fw btn btn-danger"
-             data-toggle="modal" data-target="#exampleModal">
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash-fill"
-                 viewBox="0 0 16 16">
-              <path
-                d="M2.5 1a1 1 0 0 0-1 1v1a1 1 0 0 0 1 1H3v9a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V4h.5a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H10a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1H2.5zm3 4a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 .5-.5zM8 5a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7A.5.5 0 0 1 8 5zm3 .5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 1 0z"/>
-            </svg>
-          </a>
-
-          <a target="_parent" href="#" style="padding:0px ; background-color: #ffc107;"
-             class="fa fa-fw btn btn-warning">
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil-fill"
-                 viewBox="0 0 16 16">
-              <path
-                d="M12.854.146a.5.5 0 0 0-.707 0L10.5 1.793 14.207 5.5l1.647-1.646a.5.5 0 0 0 0-.708l-3-3zm.646 6.061L9.793 2.5 3.293 9H3.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.207l6.5-6.5zm-7.468 7.468A.5.5 0 0 1 6 13.5V13h-.5a.5.5 0 0 1-.5-.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.5-.5V10h-.5a.499.499 0 0 1-.175-.032l-.179.178a.5.5 0 0 0-.11.168l-2 5a.5.5 0 0 0 .65.65l5-2a.5.5 0 0 0 .168-.11l.178-.178z"/>
-            </svg>
-          </a>
-        </div>
-      </article>
-    </div>
-    <!-- card 3-->
-    <div class="col-md-4 col-sm-6 col-xs-12">
-      <article class="material-card Red">
-        <h2>
-          <span>Shahnur Alam</span>
-          <strong>
-            <i class="fa fa-fw fa-magic"></i>
-            Qui Maleficus
-          </strong>
-        </h2>
-        <div class="mc-content">
-          <div class="img-container">
-            <img
-              class="img-responsive"
-              src="https://media-cdn.tripadvisor.com/media/photo-s/12/4e/e9/13/vip-room-2.jpg"
-            />
-          </div>
-          <div class="mc-description">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. ...
-          </div>
-        </div>
-        <a class="mc-btn-action">
-          <i class="fa fa-bars"></i>
-        </a>
-        <div class="mc-footer">
-          <h4>Social</h4>
-          <a target="_parent" href="#" style="padding:0px ; background-color: red;" class="fa fa-fw btn btn-danger"
-             data-toggle="modal" data-target="#exampleModal">
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash-fill"
-                 viewBox="0 0 16 16">
-              <path
-                d="M2.5 1a1 1 0 0 0-1 1v1a1 1 0 0 0 1 1H3v9a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V4h.5a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H10a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1H2.5zm3 4a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 .5-.5zM8 5a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7A.5.5 0 0 1 8 5zm3 .5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 1 0z"/>
-            </svg>
-          </a>
-
-          <a target="_parent" href="#" style="padding:0px ; background-color: #ffc107;"
-             class="fa fa-fw btn btn-warning">
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil-fill"
-                 viewBox="0 0 16 16">
-              <path
-                d="M12.854.146a.5.5 0 0 0-.707 0L10.5 1.793 14.207 5.5l1.647-1.646a.5.5 0 0 0 0-.708l-3-3zm.646 6.061L9.793 2.5 3.293 9H3.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.207l6.5-6.5zm-7.468 7.468A.5.5 0 0 1 6 13.5V13h-.5a.5.5 0 0 1-.5-.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.5-.5V10h-.5a.499.499 0 0 1-.175-.032l-.179.178a.5.5 0 0 0-.11.168l-2 5a.5.5 0 0 0 .65.65l5-2a.5.5 0 0 0 .168-.11l.178-.178z"/>
-            </svg>
-          </a>
-        </div>
-      </article>
-    </div>
-
-    <!-- card 4-->
-    <div class="col-md-4 col-sm-6 col-xs-12">
-      <article class="material-card Red">
-        <h2>
-          <span>Shahnur Alam</span>
-          <strong>
-            <i class="fa fa-fw fa-magic"></i>
-            Qui Maleficus
-          </strong>
-        </h2>
-        <div class="mc-content">
-          <div class="img-container">
-            <img
-              class="img-responsive"
-              src="https://media-cdn.tripadvisor.com/media/photo-s/12/4e/e9/13/vip-room-2.jpg"
-            />
-          </div>
-          <div class="mc-description">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. ...
-          </div>
-        </div>
-        <a class="mc-btn-action">
-          <i class="fa fa-bars"></i>
-        </a>
-        <div class="mc-footer">
-          <h4>Social</h4>
-          <a target="_parent" href="#" style="padding:0px ; background-color: red;" class="fa fa-fw btn btn-danger"
-             data-toggle="modal" data-target="#exampleModal">
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash-fill"
-                 viewBox="0 0 16 16">
-              <path
-                d="M2.5 1a1 1 0 0 0-1 1v1a1 1 0 0 0 1 1H3v9a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V4h.5a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H10a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1H2.5zm3 4a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 .5-.5zM8 5a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7A.5.5 0 0 1 8 5zm3 .5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 1 0z"/>
-            </svg>
-          </a>
-
-          <a target="_parent" href="#" style="padding:0px ; background-color: #ffc107;"
-             class="fa fa-fw btn btn-warning">
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil-fill"
-                 viewBox="0 0 16 16">
-              <path
-                d="M12.854.146a.5.5 0 0 0-.707 0L10.5 1.793 14.207 5.5l1.647-1.646a.5.5 0 0 0 0-.708l-3-3zm.646 6.061L9.793 2.5 3.293 9H3.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.207l6.5-6.5zm-7.468 7.468A.5.5 0 0 1 6 13.5V13h-.5a.5.5 0 0 1-.5-.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.5-.5V10h-.5a.499.499 0 0 1-.175-.032l-.179.178a.5.5 0 0 0-.11.168l-2 5a.5.5 0 0 0 .65.65l5-2a.5.5 0 0 0 .168-.11l.178-.178z"/>
-            </svg>
-          </a>
-        </div>
-      </article>
-    </div>
-    <!-- card 5-->
-    <div class="col-md-4 col-sm-6 col-xs-12">
-      <article class="material-card Red">
-        <h2>
-          <span>Shahnur Alam</span>
-          <strong>
-            <i class="fa fa-fw fa-magic"></i>
-            Qui Maleficus
-          </strong>
-        </h2>
-        <div class="mc-content">
-          <div class="img-container">
-            <img
-              class="img-responsive"
-              src="https://media-cdn.tripadvisor.com/media/photo-s/12/4e/e9/13/vip-room-2.jpg"
-            />
-          </div>
-          <div class="mc-description">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. ...
-          </div>
-        </div>
-        <a class="mc-btn-action">
-          <i class="fa fa-bars"></i>
-        </a>
-        <div class="mc-footer">
-          <h4>Social</h4>
-          <a target="_parent" href="#" style="padding:0px ; background-color: red;" class="fa fa-fw btn btn-danger"
-             data-toggle="modal" data-target="#exampleModal">
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash-fill"
-                 viewBox="0 0 16 16">
-              <path
-                d="M2.5 1a1 1 0 0 0-1 1v1a1 1 0 0 0 1 1H3v9a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V4h.5a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H10a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1H2.5zm3 4a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 .5-.5zM8 5a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7A.5.5 0 0 1 8 5zm3 .5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 1 0z"/>
-            </svg>
-          </a>
-
-          <a target="_parent" href="#" style="padding:0px ; background-color: #ffc107;"
-             class="fa fa-fw btn btn-warning">
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil-fill"
-                 viewBox="0 0 16 16">
-              <path
-                d="M12.854.146a.5.5 0 0 0-.707 0L10.5 1.793 14.207 5.5l1.647-1.646a.5.5 0 0 0 0-.708l-3-3zm.646 6.061L9.793 2.5 3.293 9H3.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.207l6.5-6.5zm-7.468 7.468A.5.5 0 0 1 6 13.5V13h-.5a.5.5 0 0 1-.5-.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.5-.5V10h-.5a.499.499 0 0 1-.175-.032l-.179.178a.5.5 0 0 0-.11.168l-2 5a.5.5 0 0 0 .65.65l5-2a.5.5 0 0 0 .168-.11l.178-.178z"/>
-            </svg>
-          </a>
-        </div>
-      </article>
-    </div>
-
-    <!-- card end -->
-
-    <!-- Modal -->
-    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-         aria-hidden="true">
-      <div class="modal-dialog" role="document">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-              <span aria-hidden="true">&times;</span>
-            </button>
-          </div>
-          <div class="modal-body">
-            ...
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-            <button type="button" class="btn btn-primary">Save changes</button>
-          </div>
-        </div>
-      </div>
-    </div>
+    <app-modal [contentDelete]="contentDelete"></app-modal>
   </div>
 </section>
