--- a/case-study/src/app/customer/customer-create/customer-create.component.html
+++ b/case-study/src/app/customer/customer-create/customer-create.component.html
@@ -75,7 +75,7 @@
         <div class="form-group row">
           <label for="phone" class="col-sm-3 col-form-label">Phone</label>
           <div class="col-sm-9">
-            <input type="number" class="form-control" id="phone" name="phone" formControlName="phone">
+            <input type="text" class="form-control" id="phone" name="phone" formControlName="phone">
             <p style="color: red" *ngIf="createCus.controls.phone.hasError('required') && createCus.controls.phone.touched">
               Không đc để trống
             </p>
