--- a/case-study/src/app/modal/modal.component.html
+++ b/case-study/src/app/modal/modal.component.html
@@ -14,7 +14,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Delete</button>
+        <button type="button" class="btn btn-primary" (click)="remove(arr,id)">Delete</button>
       </div>
     </div>
   </div>
