--- a/case-study/src/app/facility/facility-list/facility.component.html
+++ b/case-study/src/app/facility/facility-list/facility.component.html
@@ -63,7 +63,6 @@
         </div>
       </article>
     </div>
-
-    <app-modal [contentDelete]="contentDelete"></app-modal>
+<!--    modal-->
   </div>
 </section>
