--- a/case-study/src/app/contract/contract-create/contract-create.component.html
+++ b/case-study/src/app/contract/contract-create/contract-create.component.html
@@ -14,6 +14,7 @@
 <!--================Banner Area =================-->
 <!-- ================ Explore section start ================= -->
 <section class="section-margin section-margin--small">
+  <form [formGroup]="createContract" (ngSubmit)="onSubmit()">
   <div class="container">
     <div class="section-intro text-center pb-80px">
       <div class="section-intro__style">
@@ -26,31 +27,28 @@
         <div class="form-group row">
           <label for="startDate" class="col-sm-3 col-form-label">Start Date</label>
           <div class="col-sm-9">
-            <input type="date" class="form-control" id="startDate">
+            <input type="date" class="form-control" id="startDate" formControlName="startDate">
+            <p style="color: red" *ngIf="createContract.controls.startDate.hasError('required') && createContract.controls.startDate.touched">
+              Không đc để trống
+            </p>
           </div>
         </div>
         <div class="form-group row">
           <label for="endDate" class="col-sm-3 col-form-label">End Date</label>
           <div class="col-sm-9">
-            <input type="date" class="form-control" id="endDate">
+            <input type="date" class="form-control" id="endDate" formControlName="endDate">
+            <p style="color: red" *ngIf="createContract.controls.endDate.hasError('required') && createContract.controls.endDate.touched">
+              Không đc để trống
+            </p>
           </div>
         </div>
         <div class="form-group row">
           <label for="deposit" class="col-sm-3 col-form-label">Deposit</label>
           <div class="col-sm-9">
-            <input type="number" class="form-control" id="deposit" step="any">
-          </div>
-        </div>
-        <div class="form-group row">
-          <label for="employee" class="col-sm-3 col-form-label">Employee Create</label>
-          <div class="col-sm-9">
-            <select class="form-control"
-                    id="employee"
-                    name="employee">
-              <option value="null">Select Employee</option>
-              <option value="1">tbg</option>
-              <option value="2">tran giang</option>
-            </select>
+            <input type="number" class="form-control" id="deposit" step="any" formControlName="deposit">
+            <p style="color: red" *ngIf="createContract.controls.deposit.hasError('required') && createContract.controls.deposit.touched">
+              Không đc để trống
+            </p>
           </div>
         </div>
         <div class="form-group row">
@@ -58,11 +56,12 @@
           <div class="col-sm-9">
             <select class="form-control"
                     id="customer"
-                    name="customer">
-              <option value="null">Select Customer</option>
-              <option value="1">giảng</option>
-              <option value="2">tbg</option>
+                    name="customer" formControlName="customer">
+              <option *ngFor="let item of customers" [ngValue]="item">{{item.name}}</option>
             </select>
+            <p style="color: red" *ngIf="createContract.controls.customer.hasError('required') && createContract.controls.customer.touched">
+              Không đc để trống
+            </p>
           </div>
         </div>
         <div class="form-group row">
@@ -70,11 +69,21 @@
           <div class="col-sm-9">
             <select class="form-control"
                     id="facility"
-                    name="facility">
-              <option value="null">Select Service</option>
-              <option value="1">Villa River Side</option>
-              <option value="2">Room Street view</option>
+                    name="facility" formControlName="facility">
+              <option *ngFor="let item of facilitys" [ngValue]="item">{{item.name}}</option>
             </select>
+            <p style="color: red" *ngIf="createContract.controls.facility.hasError('required') && createContract.controls.facility.touched">
+              Không đc để trống
+            </p>
+          </div>
+        </div>
+        <div class="form-group row">
+          <label for="facility" class="col-sm-3 col-form-label">Total</label>
+          <div class="col-sm-9">
+            <input type="text" class="form-control" step="any" formControlName="total">
+            <p style="color: red" *ngIf="createContract.controls.total.hasError('required') && createContract.controls.total.touched">
+              Không đc để trống
+            </p>
           </div>
         </div>
         <div class="d-flex justify-content-center">
@@ -82,13 +91,13 @@
             <a href="#" class="button button--cancel cancel-banner-btn">Cancel</a>
           </div>
           <div class="mx-2">
-            <a href="#" class="button button--active home-banner-btn">Create</a>
+            <button type="submit" class="button button--active home-banner-btn">Create</button>
           </div>
         </div>
       </div>
     </div>
 
   </div>
-
+  </form>
 </section>
 <!-- ================ Explore section end ================= -->
